# pomodoro-timer-c

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.c  timer.c  timer.h  ui.c  ui.h
